--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,8 +27,10 @@ jobs:
       
       - name: Lint with Flake8
         run: |
-          flake8 .
-        
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          
       - name: Run Tests
         run: |
           python manage.py test
